--- a/clusterrolebinding.yaml
+++ b/clusterrolebinding.yaml
@@ -10,5 +10,10 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
   name: vzharov
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: mharris
+
+
 
 
