--- a/defaultproject/projectconfig.yaml
+++ b/defaultproject/projectconfig.yaml
@@ -7,7 +7,7 @@ metadata:
   resourceVersion: "87795"
 spec:
   projectRequestMessage: To provision Projects you must request access in https://labs.opentlc.com
-    or https://rhpds.redhat.com.
+    or https://rhpds.redhat.com. Tested with ArgoCD OCP.
   projectRequestTemplate:
     name: project-request
 
