--- a/defaultproject/projectconfig.yaml
+++ b/defaultproject/projectconfig.yaml
@@ -3,12 +3,8 @@ kind: Project
 metadata:
   annotations:
     release.openshift.io/create-only: "true"
-  creationTimestamp: "2020-03-19T16:47:23Z"
-  generation: 2
+    argocd.argoproj.io/sync-options: Prune=false
   name: cluster
-  resourceVersion: "17975"
-  selfLink: /apis/config.openshift.io/v1/projects/cluster
-  uid: cae6f131-df47-404f-9e5c-ebe1c7d79345
 spec:
   projectRequestMessage: To provision Projects you must request access in https://labs.opentlc.com or https://rhpds.redhat.com. Tested with ArgoCD.
   projectRequestTemplate:
