--- a/defaultproject/projectconfig.yaml
+++ b/defaultproject/projectconfig.yaml
@@ -5,6 +5,7 @@ metadata:
     release.openshift.io/create-only: "true"
     argocd.argoproj.io/sync-options: Prune=false
   name: cluster
+  resourceVersion: "256745"
 spec:
   projectRequestMessage: To provision Projects you must request access in https://labs.opentlc.com or https://rhpds.redhat.com. Tested with ArgoCD.
   projectRequestTemplate:
